--- a/about.html
+++ b/about.html
@@ -5,13 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <!-- ABOUT PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href = "menu.html">Menu</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <img src ="assets\images\banner.png" alt="banner">
     <main>
         <!-- About page code here -->
+        <h1>About Us</h1>
+        <h2>Locations</h2>
+        <ul>
+            <li>Texas</li>
+            <li>Mexico</li>
+            <li>Nevada</li>
+            <li>Canada</li>
+        </ul>
+        <h2>Origin Story</h2>
+        <ul>
+            <li><p><u>Texas</u></p></li>
+        </ul>
+        <p>It all starts in the border of Texas. Where family and flavor met in one kitchen.</p>
+        <img src="assets\images\about.jpg" alt="about">
     </main>
 </body>
 </html>
