--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link 
+    rel="stylesheet" 
+    href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+    crossorigin="anonymous"/>
 </head>
 <body>
     <!-- CONTACT PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href = "menu.html">Menu</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <img src="assets\images\banner.png" alt="banner">
     <main>
         <h2>Hours of Operation</h2>
+        
         <p>
             <strong>Monday-Friday:</strong> 11:00am-8:30pm
         </p>
@@ -20,7 +44,16 @@
         </p>
         <h2>Contact Info</h2>
         <p>
-            <strong>Phone Number:</strong> TBD
+            <i class="fa fa-phone" aria-hidden="true"></i>
+            <strong>Phone Number:</strong> 888-985-8965
+        </p>
+        <p>
+            <i class="fa fa-map-marker" aria-hidden="true"></i>
+            <strong>Address:</strong> 123 Rainbow road, Edinburg, Texas
+        </p>
+        <p>
+            <i class="fa fa-envelope" aria-hidden="true"></i>
+            <strong>Customer Service:</strong> Help@Thai.com
         </p>
     </main>
 </body>
