--- a/index.html
+++ b/index.html
@@ -9,10 +9,40 @@
 <body>
     <!-- HOME PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+
+            </li>
+            <li>
+                <a href = "menu.html">Menu</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+                
+
+        </ul>
+
+
+    </nav>
     <!-- TODO: Banner Image here-->
+    <img src = "\assets\images\banner.png" alt = "banner">
     <main>
         <h1>H-Thai-ML</h1>
         <!-- TODO: Home page code here-->
+        <h2>The Spice is nice</h2>
+        
+        <div class = "service">Dine In</div>
+        <div class = "service">Take Out</div>
+        <div class = "service">Delivery</div>
+
+        <img src ="assets\images\table-in-restaurant.jpg" alt="tables">
     </main>
 </body>
 </html>
