--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
 
 
     </nav>
-    <!-- TODO: Banner Image here-->
-    <img src="assets\images\banner.png" alt="banner">
+    <!-- TODO: Banner Image here,moved into main -->
+    
     <main>
+        <img src="assets\images\banner.png" alt="banner">
         <h1>H-Thai-ML</h1>
         <!-- TODO: Home page code here-->
         <h2>The Spice is nice</h2>
